--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row" style="justify-content: center">
+    <form>
+      <div class="form-group" style="margin-top: 10px;">
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          class="form-control"
+          name="email"
+          required
+          email>
+      </div>
+      <div class="form-group" style="margin-top: 10px;">
+        <label for="password">Password:</label>
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          name="password"
+          required
+          minlength="6">
+      </div>
+      <div style="margin-top: 20px;">
+        <button class="btn btn-primary">Login</button>
+      </div>
+    </form>
+  </div>
+</div>
