Chore: Signup style(for First and Last name)

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
   <div class="row" style="justify-content: center">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
-        <div class="form-row">
+        <div class="row">
           <div class="form-group col-md-6" style="margin-top: 10px;">
             <label for="firstName">First Name:</label>
             <input
