add: Job Posting Service

--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -1,1 +1,12 @@
-<p>job-posting works!</p>
+<div class="container">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">name</h5>
+      <h6 class="card-text">company</h6>
+      <h6 class="">category</h6>
+      <p>level</p>
+      <p>location</p>
+      <a href="#" class="btn btn-primary">Go To Job Posting</a>
+    </div>
+  </div>
+</div>
