Chore: Changes Signup button color

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -46,7 +46,7 @@
             ngModel>
         </div>
         <div style="margin-top: 20px;">
-          <button type="submit" class="btn btn-primary">Sign Up</button> |
+          <button type="submit" class="btn btn-outline-success" style="background-color: #DAE78E;">Sign Up</button> |
           <small>If you already have an account please click <a routerLink="/login">here</a></small>
         </div>
       </form>
