--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -6,7 +6,7 @@
       <h6 class="">category</h6>
       <p>level</p>
       <p>location</p>
-      <a href="#" class="btn btn-primary">Go To Job Posting</a>
+      <a href="https://www.themuse.com" class="btn btn-primary">Go To Job Posting</a>
     </div>
   </div>
 </div>
