Update: job-posting.module

--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -1,3 +1,4 @@
+<!-- *ngFor="let jobPost of jobPosting; let i=index -->
 <div class="container">
   <div class="card" style="width: 18rem;">
     <div class="card-body">
