--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row" style="justify-content: center">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <form>
+      <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
         <div class="form-group" style="margin-top: 10px;">
           <label for="email">Email:</label>
           <input
@@ -10,7 +10,7 @@
             class="form-control"
             name="email"
             required
-            email
+            ngModel
             placeholder="Email">
         </div>
         <div class="form-group" style="margin-top: 10px;">
@@ -21,6 +21,7 @@
             class="form-control"
             name="password"
             required
+            ngModel
             minlength="6"
             placeholder="Password">
         </div>
