--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row" style="justify-content: center">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <h1>Welcome to the CoLab app! Please Sign Up Here.</h1>
+      <hr>
       <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
         <div class="row">
           <div class="form-group col-md-6" style="margin-top: 10px;">
