--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -1,3 +1,10 @@
-<app-discussion-post></app-discussion-post>
-<app-discussion-card ></app-discussion-card>
-
+<div class="container" style="margin-top: 5%">
+  <div style="text-align: center">
+    <h1>Welcome to the Discussion Board</h1>
+    <h3>Find resources and answers pertaining to your questions</h3>
+  </div>
+  <button routerLink="/discussion/new" class="btn btn-success">+</button>
+  <div style="margin-top: 5%">
+    <app-discussion-card></app-discussion-card>
+  </div>
+</div>
