Chore: Change button color on Login Component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
             placeholder="Password">
         </div>
         <div style="margin-top: 20px;">
-          <button type="submit" class="btn btn-primary">Login</button> |
+          <button type="submit" style="background-color: #DAE78E;" class="btn btn-outline-success">Login</button> |
           <small>If you don't have an account please sign up, <a routerLink="/signup">here</a></small>
         </div>
       </form>
