--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,9 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" *ngIf="isAuthenticated">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
           <a class="nav-link" routerLink="/jobposting">Job Posting</a>
         </li>
         <li class="nav-item">
@@ -27,7 +27,9 @@
           </ul>
         </li>
       </ul>
-      <button class="btn btn-outline-success" style="background-color: #DAE78E;" routerLink="/login">Login</button>
+      <button class="btn btn-outline-success" style="background-color: #DAE78E;" routerLink="/login" *ngIf="!isAuthenticated">Login</button>
+      <button class="btn btn-outline-success" style="background-color: #DAE78E;" *ngIf="isAuthenticated" (click)="onLogout();">Logout</button>
+
     </div>
   </div>
 </nav>
