--- a/src/app/discussion/discussion-show/discussion-show.component.html
+++ b/src/app/discussion/discussion-show/discussion-show.component.html
@@ -1,1 +1,55 @@
-<p>discussion-show works!</p>
+<div style="margin-top: 5%;">
+<div class="container">
+<div class="row">
+  <div class="col-md-12">
+    <div class="card mb-4">
+      <div class="card-header">
+        <div class="media flex-wrap w-100 align-items-center">
+          <img
+            src="https://www.pngkey.com/png/detail/230-2301779_best-classified-apps-default-user-profile.png"
+            class="d-block ui-w-40 rounded-circle"
+            alt=""
+            width="60"
+            height="50"
+            style="object-fit: cover"
+          />
+          <p>Username</p>
+
+          <h3>Question: {{ this.id}}</h3>
+          <div class="media-body ml-3">
+            <a></a>
+            <div class="text-muted small">ID {{ this.id }}</div>
+          </div>
+        </div>
+        <div class="card-body">
+          <p>{{ this.id }}</p>
+        </div>
+        <div
+          class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3"
+        >
+          <div class="px-4 pt-3">
+            <button
+              type="button"
+              class="btn btn-primary"
+              (click)="OnClickOpenForm()"
+            >
+              Reply</button
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<hr>
+</div>
+
+<app-reply-form [hidden]="!openForm"></app-reply-form>
+<app-reply-card></app-reply-card>
+
+<!-- This to do
+1) button to commment on this page
+2) Use sticky feature on the og post
+3) Need conditional to see if id does equal 10
+-->
