--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,26 +5,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" *ngIf="isAuthenticated">Home</a>
+      <ul class="nav me-auto mb-2 mb-lg-0 nav-tabs">
+        <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
+          <a class="nav-link" routerLink="/">Home</a>
         </li>
         <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
           <a class="nav-link" routerLink="/jobposting">Job Posting</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/"></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
+          <a class="nav-link" routerLink="/">Discussion</a>
         </li>
       </ul>
       <button class="btn btn-outline-success" style="background-color: #DAE78E;" routerLink="/login" *ngIf="!isAuthenticated">Login</button>
