--- a/src/app/discussion/discussion-show/reply-card/reply-card.component.html
+++ b/src/app/discussion/discussion-show/reply-card/reply-card.component.html
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="card-body">
-            <p>{{ replyCard.postText }}</p>
+            <p>{{ replyCard.replyText }}</p>
           </div>
           <div
             class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3"
