--- a/src/app/discussion/discussion-card/discussion-card.component.html
+++ b/src/app/discussion/discussion-card/discussion-card.component.html
@@ -33,7 +33,7 @@
               <button
                 type="button"
                 class="btn btn-primary"
-                routerLink="{{ post.id }}"
+                routerLink="{{ postIndex }}"
               >
                 View</button
               >|
