--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" style="color: #DAE78E;">
   <div class="container-fluid">
-    <a class="navbar-brand">CoLab</a>
+    <a class="navbar-brand" routerLink="/">
+      <img src="../../assets/image/CoLabLogo.png" alt="CoLabLogo" height="30" >
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
