--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -1,5 +1,5 @@
-<div class="container" style="margin-top: 5%">
-  <div style="text-align: center">
+<div id="background">
+  <div style="text-align: center; margin-top: 5%" class="container">
     <h1>Welcome to the Discussion Board</h1>
     <h3>Find resources and answers pertaining to your questions</h3>
   </div>
@@ -8,3 +8,4 @@
     <app-discussion-card></app-discussion-card>
   </div>
 </div>
+
