--- a/src/app/discussion/discussion-show/discussion-show.component.html
+++ b/src/app/discussion/discussion-show/discussion-show.component.html
@@ -1,3 +1,4 @@
+<div id="backgroundImage">
 <div style="margin-top: 5%">
     <button
       type="button"
@@ -60,4 +61,4 @@
 
 <app-reply-form [hidden]="!openForm"></app-reply-form>
 <app-reply-card></app-reply-card>
-
+</div>
