--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -3,7 +3,9 @@
     <h1>Welcome to the Discussion Board</h1>
     <h3>Find resources and answers pertaining to your questions</h3>
   </div>
-  <button routerLink="/discussion/new" class="btn btn-success">+</button>
+  <button routerLink="/discussion/new" class="btn btn-success">
+    Start a discussion
+  </button>
   <div style="margin-top: 5%">
     <app-discussion-card></app-discussion-card>
   </div>
