ADD more CSS to reply components
Reply buttons now have CSS

--- a/src/app/discussion/discussion-show/discussion-show.component.css
+++ b/src/app/discussion/discussion-show/discussion-show.component.css
@@ -1,3 +1,21 @@
 #backgroundImage{
   background-image: url("../../../assets/image/backgroundimage.png");
 };
+
+button {
+  transition: all .5s ease;
+  color: #fdf9f9;
+  border: 1px solid rgb(231, 225, 225);
+  font-family:'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1;
+  font-size: 15px;
+  padding: 10px;
+  outline: none;
+  border-radius: 4px;
+}
+button:hover {
+  color: #000000;
+  background-color: #5B9982;
+}
