--- a/src/app/discussion/discussion-show/discussion-show.component.html
+++ b/src/app/discussion/discussion-show/discussion-show.component.html
@@ -6,7 +6,7 @@
       routerLink="/discussion">
        Back
     </button>
-<div class="container">
+<div class="container" style="margin-top: 10px;">
 <div class="row">
   <div class="col-md-12">
     <div class="card mb-4">
