--- a/src/app/discussion/discussion.component.css
+++ b/src/app/discussion/discussion.component.css
@@ -1,6 +1,7 @@
 #background {
   background-image:url("../../assets/image/backgroundimage.png");
   background-size: 500px;
+  height: auto;
 }
 
 button {
@@ -10,6 +11,7 @@ button {
   color: #fff;
   text-align: center;
   font-size: 15px;
+  font: 'Open Sans';
   padding: 10px;
   width: 180px;
   transition: all 0.5s;
