--- a/src/app/discussion/discussion-card/discussion-card.component.html
+++ b/src/app/discussion/discussion-card/discussion-card.component.html
@@ -37,7 +37,7 @@
               >
                 View</button
               >|
-              <button type="button" class="btn btn-success">
+              <button type="button" class="btn btn-success" (click)="onAddToDashboard()">
                 Save to Dashboard
               </button>
             </div>
