Update: Dashboard Displaying Discussions, added method to jobposting

--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -19,7 +19,7 @@
               <!-- <td>&nbsp;</td> -->
             </tr>
             <tr>
-              <td><button type="button" class="btn btn-secondary">Save Job Posting</button></td>
+              <td><button type="button" class="btn btn-secondary" (click)="onAddJobToDashboard()">Save Job Posting</button></td>
             </tr>
           </table>
           <!-- Old button layout
