ADD SearchBar and CSS
HTML now displays a search bar and updated CSS.

--- a/src/app/discussion/discussion-post/discussion-post.component.html
+++ b/src/app/discussion/discussion-post/discussion-post.component.html
@@ -1,5 +1,8 @@
-<h1>Discussions</h1>
-
+<div id="backgroundColor">
+<div style="text-align: center;" id="titlePage">
+  <h1> New Discussion</h1>
+</div>
+<div id="pageLayout">
 <form (ngSubmit)="onAddPost(InputRef)" #InputRef="ngForm">
   <div
     class="alert alert-info"
@@ -27,7 +30,7 @@
         class="form-control"
         name="postText"
         id="postText"
-        style = "width: 40rem; height:2.5in"
+        style = "height:2.5in"
         [ngModel]="this.post.postText"
         required>
     </div>
@@ -48,5 +51,7 @@
     </button>
   </div>
 </form>
+</div>
+</div>
 
 
