--- a/src/app/discussion/discussion-show/discussion-show.component.html
+++ b/src/app/discussion/discussion-show/discussion-show.component.html
@@ -47,7 +47,7 @@
               [hidden]="!openForm"
               (click)="onCancel()"
               >
-              Cancel
+              Close
             </button>
           </div>
         </div>
