--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -48,7 +48,7 @@
               </div>
             </div>
           </div>
-          <ng-template #noDetails>Click a card to show it's details</ng-template>
+          <ng-template #noDetails><p>Click a card to show it's details</p></ng-template>
         </div>
       </div>
   </div>
