--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -3,14 +3,12 @@
     <h1>Welcome to the Discussion Board</h1>
     <h3>Find resources and answers pertaining to your questions</h3>
   </div>
-  <button routerLink="/discussion/new" class="btn btn-success" style="margin-top: 2%; object-position: center;" id="startbutton">
+  <div>
+    <button routerLink="/discussion/new" class="startbutton">
     Start a discussion
-  </button>
-  <div class="input-group" style="width: 600px;">
-    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-    <button type="button" class="btn btn-outline-primary">search</button>
+    </button>
 </div>
-  <div style="margin-top: 5%">
+  <div>
     <app-discussion-card></app-discussion-card>
   </div>
 </div>
