--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,12 @@
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <h1>Please login</h1>
       <hr>
+      <div class="alert alert-danger" *ngIf="error">
+        <p>{{ error }}</p>
+      </div>
+      <div *ngIf="isLoading" style="text-align: center;">
+        <app-loading-spinner></app-loading-spinner>
+      </div>
       <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
         <div class="form-group" style="margin-top: 10px;">
           <label for="email">Email:</label>
