--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,13 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav me-auto mb-2 mb-lg-0 nav-tabs">
         <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
-          <a class="nav-link" routerLink="/dashboard">Home</a>
+          <a class="nav-link" routerLink="/">Home</a>
         </li>
         <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
           <a class="nav-link" routerLink="/job-posting">Job Posting</a>
         </li>
         <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
           <a class="nav-link" routerLink="/discussion">Discussion</a>
+        </li>
+        <li class="nav-item" *ngIf="isAuthenticated" routerLinkActive="active">
+          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
         </li>
       </ul>
       <button class="btn btn-outline-success" style="background-color: #DAE78E;" routerLink="/login" *ngIf="!isAuthenticated">Login</button>
