--- a/src/app/discussion/discussion-show/reply-form/reply-form.component.html
+++ b/src/app/discussion/discussion-show/reply-form/reply-form.component.html
@@ -11,6 +11,7 @@
     <div class="form-group">
       <label for="postText">Title</label>
       <input
+        style = "width: 40rem;"
         type="text"
         class="form-control"
         name="title"
